fix #2 tech hover not working on iOS

--- a/css/tech.css
+++ b/css/tech.css
@@ -7,7 +7,7 @@
 
         .form_hover:hover .header {                 
             opacity: 1;
-              transform:translateY(-297px);
+               transform:translateY(-297px);
             -webkit-transform:translateY(-297px);
             -moz-transform:translateY(-297px);
             -ms-transform:translateY(-297px);
@@ -45,3 +45,14 @@
             top: -20px;
             width: 100%;
         }
+        @media only screen and (max-device-width: 480px) {
+              .form_hover:hover .header {                 
+                    opacity: 1;
+                    transform: none;
+                    -webkit-transform: none;
+                    -moz-transform: none;
+                    -ms-transform: none;
+                    -o-transform: none;
+        }
+
+	}
